# backend/internal/router/router.go
@@ -57,6 +57,11 @@ func New() *http.ServeMux {
 		middleware.RequireRoles("admin"),
 		middleware.Handle(controller.UpdateUser),
 	))
+	mux.Handle("PATCH /users/{id}/password", middleware.Chain(
+		middleware.RequireAuth,
+		middleware.RequireRoles("admin"),
+		middleware.Handle(controller.SetUserPassword),
+	))
 	mux.Handle("DELETE /users/{id}", middleware.Chain(
 		middleware.RequireAuth,
 		middleware.RequireRoles("admin"),
